# AI-Robot-v1.0

./: .gitignore  CLAUDE.md  GUIDE.md  requirements_training.txt
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  main.c
esp32/main/audio/: i2s_audio.c  i2s_audio.h
esp32/main/display/: face.c  face.h  gfx.c  gfx.h  st7789.c  st7789.h
esp32/main/sensors/: touch.c  touch.h
esp32/main/uart_comm/: uart_comm.c  uart_comm.h
esp32_display/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32_display/main/: CMakeLists.txt  face.c  face.h  gfx.c  gfx.h  ili9341.c  ili9341.h  main.c  (+2 more)
gru_behavior_model/: _weight_map.csv  gru_behavior.cvimodel  gru_behavior.mlir  gru_behavior.ref_files.json  gru_behavior_cali_table  gru_behavior_cv181x_int8.layer_group_cache.json  gru_behavior_cv181x_int8_sym_final.mlir  gru_behavior_cv181x_int8_sym_tpu.mlir  gru_behavior_opt.onnx.prototxt  gru_behavior_origin.mlir  gru_behavior_tensor_info.txt  gru_behavior_top_f32_all_weight.npz  gru_behavior_tpu_addressed_cv181x_int8_sym_weight.npz  gru_behavior_tpu_addressed_cv181x_int8_sym_weight_fix.npz  shape_pattern_qtable
wake_word_model/: _weight_map.csv  shape_pattern_qtable  wake_word.cvimodel  wake_word.mlir  wake_word.ref_files.json  wake_word_cali_table  wake_word_cv181x_int8.layer_group_cache.json  wake_word_cv181x_int8_sym_tpu.mlir  wake_word_opt.onnx.prototxt  wake_word_origin.mlir  wake_word_tensor_info.txt  wake_word_top_f32_all_weight.npz  wake_word_tpu_addressed_cv181x_int8_sym_weight.npz  wake_word_tpu_addressed_cv181x_int8_sym_weight_fix.npz
(+346 files in other folders)
